refactoring of JWT filter